Corrigido autenticação
