# routes/api.php
@@ -3,9 +3,7 @@
 use App\Models\BaseModel;
 use App\Models\TypePerson;
 use Illuminate\Http\Request;
-use \Illuminate\Support\Facades\Route;
-use Routes\Models\RouteActionModel;
-use Routes\Models\RouteModel;
+use Illuminate\Support\Facades\Route;
 use Routes\Services\RouteService;
 
 Route::middleware('auth:api')->get('/user', function (Request $request) {
@@ -17,25 +15,18 @@ Route::group([
 ], function () {
     Route::post('login', 'AuthController@login')->name('auto-part.oauth.login');
     Route::post('register', 'AuthController@register')->name('auto-part.oauth.register');
-    Route::group([
-        'middleware' => 'auth:api',
-        ['except' => ['auth/login']]
-    ], function () {
+    Route::group(['middleware' => 'auth:api'], function () {
         Route::post('logout', 'AuthController@logout')->name('auto-part.oauth.logout');
     });
 });
 
-Route::group([
-    'middleware' => 'auth:api',
-    ['except' => ['auth/login']]
-], function () {
-
-    /*
-     * Rotas protected
-     */
-
-    RouteService::createRoute('country', 'CountryController', BaseModel::getActionsDefault());
-
+Route::group(['middleware' => 'auth:api'], function () {
+    RouteService::createRoute('country', 'CountryController', BaseModel::getActions());
+    RouteService::createRoute('state', 'StateController', BaseModel::getActions());
 });
+
+RouteService::createRoute('country', 'CountryController', BaseModel::getActions(['find']));
+RouteService::createRoute('state', 'StateController', BaseModel::getActions(['find']));
+
 
 
